--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "vtiger": "^0.1.6"
   }
 }
